# Camera-Interface-with-OpenCV

./: .gitignore  README.md  camera.cpp  camera.h  example.cpp  example_vlc_stream.cpp
libs/: camera.cpp  camera.h
samples/average/: CMakeLists.txt  example_average.cpp
samples/coloured object recognition/: CmakeLists.txt  main.cpp
samples/standard_example/: CMakeLists.txt  example.cpp
samples/stereo/: CMakeLists.txt  Readme.md  example_stereo_noise_reduction.cpp  main.cpp
samples/stereo/Resources/: resources.txt
samples/stereo/libs/: camera.cpp  camera.h
