cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(CameraInterface)
set (OpenCV_DIR /usr/local/opt/opencv3/share/OpenCV)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11") 
find_package( OpenCV REQUIRED )
find_package( Threads )
add_executable(run_stereo example_stereo_noise_reduction.cpp libs/camera.h libs/camera.cpp )
target_link_libraries(run_stereo ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
